--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -149,42 +149,42 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-1">
-          <div class="col-md-10 col-sm-6 portfolio-item">
-            <div class="portfolio-caption">
-              <h4>Food Desert Map</h4>
-              <p class="text-muted">This map's color scheme displays the percentage of people, by county, living in food
-                deserts. The darkest color
-                represents the largest number of people living in food deserts.</p>
-            </div>
-            
-            <div class='tableauPlaceholder' id='viz1565917936397' style='position: relative'><noscript><a href='#'><img
-                    alt=' '
-                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1_rss.png'
-                    style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                <param name='embed_code_version' value='3' />
-                <param name='site_root' value='' />
-                <param name='name' value='FD_v1&#47;FoodDesertUSAMap' />
-                <param name='tabs' value='no' />
-                <param name='toolbar' value='yes' />
-                <param name='static_image'
-                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1.png' />
-                <param name='animate_transition' value='yes' />
-                <param name='display_static_image' value='yes' />
-                <param name='display_spinner' value='yes' />
-                <param name='display_overlay' value='yes' />
-                <param name='display_count' value='yes' />
-                <param name='filter' value='publish=yes' /></object>
-            </div>
-            <script type='text/javascript'>
-              var divElement = document.getElementById('viz1565917936397'); var vizElement = divElement.getElementsByTagName('object')[0];
-              vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-              var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-              vizElement.parentNode.insertBefore(scriptElement, vizElement);  
-            </script>
+        <div class="col-md-1"></div>
+        <div class="col-lg-10 col-sm-6 portfolio-item">
+          <div class="portfolio-caption">
+            <h4>Food Desert Map</h4>
+            <p class="text-muted">This map's color scheme displays the percentage of people, by county, living in food
+              deserts. The darkest color
+              represents the largest number of people living in food deserts.</p>
+          </div>
 
-            <!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+          <div class='tableauPlaceholder' id='viz1565917936397' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1_rss.png'
+                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='FD_v1&#47;FoodDesertUSAMap' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' />
+              <param name='filter' value='publish=yes' /></object>
+          </div>
+          <script type='text/javascript'>
+            var divElement = document.getElementById('viz1565917936397'); var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);  
+          </script>
+
+          <!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-plus fa-3x"></i>
@@ -192,175 +192,131 @@
               </div>
               <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
             </a> -->
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
+        </div>
+
+        <div class="col-md-1"></div>
+        <div class="col-lg-10 col-sm-6 portfolio-item">
+          <!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
             </div>
+            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+          </a> -->
+          <div class="portfolio-caption">
+            <h4>Dollar Store Map</h4>
+            <p class="text-muted">The map illustrates the number of dollar stores nationwide.</p>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
+
+          <!-- Link to Dollar Store Map goes here !!!! -->
+
+        </div>
+
+        <div class="col-md-1"></div>
+        <div class="col-lg-10 col-sm-6 portfolio-item">
+          <!-- <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
             </div>
+            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+          </a> -->
+          <div class="portfolio-caption">
+            <h4>Dollar Store Trends</h4>
+            <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
+          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
+                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' />
+              <param name='filter' value='publish=yes' /></object></div>
+          <script type='text/javascript'>
+            var divElement = document.getElementById('viz1565920836892');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
+            vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);             
+          </script>
+
+        </div>
+
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
             </div>
+            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Lines</h4>
+            <p class="text-muted">Branding</p>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Southwest</h4>
-              <p class="text-muted">Website Design</p>
             </div>
+            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Southwest</h4>
+            <p class="text-muted">Website Design</p>
           </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
             </div>
+            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Window</h4>
+            <p class="text-muted">Photography</p>
           </div>
         </div>
       </div>
   </section>
 
-  <br>
-  <h2>Food Desert Map</h2>
-  <p>This map's color scheme displays the percentage of people, by county, living in food deserts. The darkest color
-    represents the largest number of people living in food deserts. </p>
-
-  <!-- <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-10"> -->
-  <div class='tableauPlaceholder' id='viz1565917936397' style='position: relative'><noscript><a href='#'><img alt=' '
-          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1_rss.png'
-          style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-      <param name='embed_code_version' value='3' />
-      <param name='site_root' value='' />
-      <param name='name' value='FD_v1&#47;FoodDesertUSAMap' />
-      <param name='tabs' value='no' />
-      <param name='toolbar' value='yes' />
-      <param name='static_image'
-        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1.png' />
-      <param name='animate_transition' value='yes' />
-      <param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' />
-      <param name='display_overlay' value='yes' />
-      <param name='display_count' value='yes' />
-      <param name='filter' value='publish=yes' /></object></div>
-  <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1565917936397'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-
-  <!-- </div>
-  </div> -->
 
   <br>
+  <h2>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h2>
+  <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables
+    are displayed.
+  </p>
 
+  <!-- <div class="row"> -->
+  <p>Urban / Rural Selection </p>
   <br>
-  <h2>Dollar Store Map</h2>
-  <p>
-    <!-- <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
-
-      </div>
-    </div> -->
-
-    <br>
-
-    <h2>Dollar Store Trends</h2>
-    <p>The map illustrates the number of dollar stores nationwide. </p>
-
-    <!-- <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10"> -->
-    <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img alt=' '
-            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
-            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-        <param name='embed_code_version' value='3' />
-        <param name='site_root' value='' />
-        <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
-        <param name='tabs' value='no' />
-        <param name='toolbar' value='yes' />
-        <param name='static_image'
-          value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
-        <param name='animate_transition' value='yes' />
-        <param name='display_static_image' value='yes' />
-        <param name='display_spinner' value='yes' />
-        <param name='display_overlay' value='yes' />
-        <param name='display_count' value='yes' />
-        <param name='filter' value='publish=yes' /></object></div>
-    <script type='text/javascript'>
-      var divElement = document.getElementById('viz1565920836892');
-      var vizElement = divElement.getElementsByTagName('object')[0];
-      vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
-      vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
-      vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-      var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);             
-    </script>
-    <!-- </div>
-    </div> -->
-
-    <br>
-    <h2>Urban / Rural Grocery Stores vs. Dollar Stores (Current and Predicted)</h2>
-    <p>The top 3 urban / rural counties with the highest number of people without access to fresh fruit and vegetables
-      are displayed.
-    </p>
-
-    <!-- <div class="row"> -->
-    <p>Urban / Rural Selection </p>
-    <br>
-    <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-      <option value="urban">Urban</option>
-      <option value="rural">Rural</option>
-    </select>
-    <!-- </div> -->
+  <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
+    <option value="urban">Urban</option>
+    <option value="rural">Rural</option>
+  </select>
+  <!-- </div> -->
 </body>
 
 <script type="text/javascript" src="../static/js/app.js"></script>
