--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -260,21 +260,27 @@
               fresh fruit and vegetables
               are displayed.</p>
           </div>
-
-          <br>
-
-          <p>Urban / Rural Selection </p>
-          <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
-            <option value="urban">Urban</option>
-            <option value="rural">Rural</option>
-          </select>
-
-          <!-- Link to Urban / Rural Graph goes here OR is access via Routes ???? -->
         </div>
       </div>
 
       <br>
-    </div>
+
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-lg-10 col-sm-6 portfolio-item">
+          <div class="portfolio-caption">
+            <p>Urban / Rural Selection </p>
+            <select id="urb_rural" class="custom-select col-md-3" onchange="optionChanged(this.value)">
+              <option value="urban">Urban</option>
+              <option value="rural">Rural</option>
+            </select>
+
+            <!-- Link to Urban / Rural Graph goes here OR is access via Routes ???? -->
+
+            
+          </div>
+        </div>
+      </div>
   </section>
 
   <!-- Team -->
@@ -288,31 +294,31 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <h4>Bic Vu</h4>
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-paint-brush fa-stack-1x fa-inverse"></i>
             </span>
+            <h4>Bic Vu</h4>
             <p class="text-muted">Lead Designer</p>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <h4>Monica Linsangan</h4>
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-globe-americas fa-stack-1x fa-inverse"></i>
             </span>
+            <h4>Monica Linsangan</h4>
             <p class="text-muted">Maps</p>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <h4>Carol Fogel</h4>
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-download fa-stack-1x fa-inverse"></i>
             </span>
+            <h4>Carol Fogel</h4>
             <p class="text-muted">xxxxx</p>
           </div>
         </div>
