--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -58,6 +58,9 @@
             <a style="color:black;" class="nav-link js-scroll-trigger" href="#predictions">Predictions</a>
           </li>
           <li class="nav-item">
+            <a style="color:black;" class="nav-link js-scroll-trigger" href="#methodology">Methodology</a>
+          </li>
+          <li class="nav-item">
             <a style="color:black;" class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
         </ul>
@@ -193,19 +196,37 @@
             <h4>Dollar Store Map</h4>
             <p class="text-muted">The map illustrates the number of dollar stores nationwide.</p>
           </div>
-
-          <!-- Link to Dollar Store Map goes here !!!! -->
-
+          <div class='tableauPlaceholder' id='viz1566062675765' style='position: relative'><noscript><a href='#'><img
+                  alt=' '
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;DollarStoresUSAMap&#47;1_rss.png'
+                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+              <param name='embed_code_version' value='3' />
+              <param name='site_root' value='' />
+              <param name='name' value='FD_v1&#47;DollarStoresUSAMap' />
+              <param name='tabs' value='no' />
+              <param name='toolbar' value='yes' />
+              <param name='static_image'
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;DollarStoresUSAMap&#47;1.png' />
+              <param name='animate_transition' value='yes' />
+              <param name='display_static_image' value='yes' />
+              <param name='display_spinner' value='yes' />
+              <param name='display_overlay' value='yes' />
+              <param name='display_count' value='yes' /></object></div>
+          <script type='text/javascript'>                    \
+            var divElement = document.getElementById('viz1566062675765'); var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);               
+          </script>
         </div>
       </div>
 
       <br>
 
       <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-lg-10 col-sm-6 portfolio-item">
+        <div class="col-lg-6 col-sm-3 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Dollar Store Trends</h4>
+            <h4>Dollar/Grocery Store Trends</h4>
             <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
           </div>
           <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
@@ -236,6 +257,40 @@
             vizElement.parentNode.insertBefore(scriptElement, vizElement);             
           </script>
         </div>
+
+        <div class="col-lg-6 col-sm-3 portfolio-item">
+            <div class="portfolio-caption">
+              <h4>Growth / Decline</h4>
+              <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
+            </div>
+            <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
+                    alt=' '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
+                    style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='site_root' value='' />
+                <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image'
+                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='filter' value='publish=yes' /></object></div>
+            <script type='text/javascript'>
+              var divElement = document.getElementById('viz1565920836892');
+              var vizElement = divElement.getElementsByTagName('object')[0];
+              vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
+              vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+              vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+              var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+              vizElement.parentNode.insertBefore(scriptElement, vizElement);             
+            </script>
+          </div>
       </div>
     </div>
   </section>
@@ -277,10 +332,37 @@
 
             <!-- Link to Urban / Rural Graph goes here OR is access via Routes ???? -->
 
-            
+
           </div>
         </div>
       </div>
+  </section>
+
+  <!-- Methodology -->
+  <section class="bg-light page-section" id="methodology">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Methodology</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-lg-10 col-sm-6">
+          <h4>Methodology 1</h4>
+          <p class="text-muted">xxxxx</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-lg-10 col-sm-6">
+          <h4>Methodology 2</h4>
+          <p class="text-muted">yyyyyy</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- Team -->
@@ -323,11 +405,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
-        </div>
-      </div> -->
     </div>
   </section>
 </body>
