--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -155,34 +155,35 @@
           <div class="portfolio-caption">
             <h4>Food Desert Map</h4>
             <p class="text-muted">This map's color scheme displays the percentage of people, by county, living in food
-              deserts. The darkest color
-              represents the largest number of people living in food deserts.</p>
+              deserts. The darkest color represents the largest number of people living in food deserts.</p>
           </div>
 
-          <div class='tableauPlaceholder' id='viz1565917936397' style='position: relative'><noscript><a href='#'><img
+          <div class='tableauPlaceholder' id='viz1566064185455' style='position: relative'><noscript><a href='#'><img
                   alt=' '
-                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1_rss.png'
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Dashboard1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
               <param name='embed_code_version' value='3' />
               <param name='site_root' value='' />
-              <param name='name' value='FD_v1&#47;FoodDesertUSAMap' />
+              <param name='name' value='FD_v1&#47;Dashboard1' />
               <param name='tabs' value='no' />
               <param name='toolbar' value='yes' />
               <param name='static_image'
-                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;FoodDesertUSAMap&#47;1.png' />
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;FD&#47;FD_v1&#47;Dashboard1&#47;1.png' />
               <param name='animate_transition' value='yes' />
               <param name='display_static_image' value='yes' />
               <param name='display_spinner' value='yes' />
               <param name='display_overlay' value='yes' />
-              <param name='display_count' value='yes' />
-              <param name='filter' value='publish=yes' /></object>
+              <param name='display_count' value='yes' /></object>
           </div>
           <script type='text/javascript'>
-            var divElement = document.getElementById('viz1565917936397'); var vizElement = divElement.getElementsByTagName('object')[0];
-            vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-            var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);  
+            var divElement = document.getElementById('viz1566064185455');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.width = '100%'; vizElement.style.maxWidth = '1754px';
+            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            vizElement.style.maxHeight = '1396px'; var scriptElement = document.createElement('script');
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
           </script>
         </div>
       </div>
@@ -212,7 +213,8 @@
               <param name='display_static_image' value='yes' />
               <param name='display_spinner' value='yes' />
               <param name='display_overlay' value='yes' />
-              <param name='display_count' value='yes' /></object></div>
+              <param name='display_count' value='yes' /></object>
+          </div>
           <script type='text/javascript'>                    \
             var divElement = document.getElementById('viz1566062675765'); var vizElement = divElement.getElementsByTagName('object')[0];
             vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script');
@@ -224,74 +226,78 @@
       <br>
 
       <div class="row">
-        <div class="col-lg-6 col-sm-3 portfolio-item">
-          <div class="portfolio-caption">
-            <h4>Dollar/Grocery Store Trends</h4>
-            <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
-          </div>
-          <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
-                  alt=' '
-                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
-                  style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-              <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-              <param name='embed_code_version' value='3' />
-              <param name='site_root' value='' />
-              <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
-              <param name='tabs' value='no' />
-              <param name='toolbar' value='yes' />
-              <param name='static_image'
-                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
-              <param name='animate_transition' value='yes' />
-              <param name='display_static_image' value='yes' />
-              <param name='display_spinner' value='yes' />
-              <param name='display_overlay' value='yes' />
-              <param name='display_count' value='yes' />
-              <param name='filter' value='publish=yes' /></object></div>
-          <script type='text/javascript'>
-            var divElement = document.getElementById('viz1565920836892');
-            var vizElement = divElement.getElementsByTagName('object')[0];
-            vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
-            vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
-            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-            var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);             
-          </script>
+        <div class="portfolio-caption">
+          <h4>Dollar/Grocery Store Trends</h4>
+          <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
         </div>
-
-        <div class="col-lg-6 col-sm-3 portfolio-item">
-            <div class="portfolio-caption">
-              <h4>Growth / Decline</h4>
-              <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
-            </div>
-            <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
-                    alt=' '
-                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
-                    style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                <param name='embed_code_version' value='3' />
-                <param name='site_root' value='' />
-                <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
-                <param name='tabs' value='no' />
-                <param name='toolbar' value='yes' />
-                <param name='static_image'
-                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
-                <param name='animate_transition' value='yes' />
-                <param name='display_static_image' value='yes' />
-                <param name='display_spinner' value='yes' />
-                <param name='display_overlay' value='yes' />
-                <param name='display_count' value='yes' />
-                <param name='filter' value='publish=yes' /></object></div>
-            <script type='text/javascript'>
-              var divElement = document.getElementById('viz1565920836892');
-              var vizElement = divElement.getElementsByTagName('object')[0];
-              vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
-              vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
-              vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-              var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-              vizElement.parentNode.insertBefore(scriptElement, vizElement);             
-            </script>
-          </div>
       </div>
+      <div class="row"></div>
+      <div class="col-lg-6 col-sm-3 portfolio-item">
+        <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
+                alt=' '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
+                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='filter' value='publish=yes' /></object>
+        </div>
+        <script type='text/javascript'>
+          var divElement = document.getElementById('viz1565920836892');
+          var vizElement = divElement.getElementsByTagName('object')[0];
+          vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
+          vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+          vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+          var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);             
+        </script>
+      </div>
+
+      <div class="col-lg-6 col-sm-3 portfolio-item">
+        <div class="portfolio-caption">
+          <h4>Growth / Decline</h4>
+          <p class="text-muted">The map illustrates the number of dollar stores from 2007 to 2018.</p>
+        </div>
+        <div class='tableauPlaceholder' id='viz1565920836892' style='position: relative'><noscript><a href='#'><img
+                alt=' '
+                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1_rss.png'
+                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='DollarStoresGrowth&#47;Dashboard1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image'
+              value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGrowth&#47;Dashboard1&#47;1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='filter' value='publish=yes' /></object>
+        </div>
+        <script type='text/javascript'>
+          var divElement = document.getElementById('viz1565920836892');
+          var vizElement = divElement.getElementsByTagName('object')[0];
+          vizElement.style.minWidth = '720px'; vizElement.style.maxWidth = '920px'; vizElement.style.width = '100%';
+          vizElement.style.minHeight = '287px'; vizElement.style.maxHeight = '687px';
+          vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+          var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);             
+        </script>
+      </div>
+    </div>
     </div>
   </section>
 
@@ -398,7 +404,7 @@
           <div class="team-member">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-download fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4>Carol Fogel</h4>
             <p class="text-muted">xxxxx</p>
